--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -209,6 +209,15 @@ jobs:
       - name: Publish release assets
         uses: softprops/action-gh-release@v2
         with:
+          generate_release_notes: true
+          body: |
+            ## macOS note
+            If macOS blocks `kraken_acb` with a malware verification warning, clear quarantine for the downloaded binary:
+
+            ```bash
+            xattr -dr com.apple.quarantine ./dist/kraken_acb
+            ```
+
           files: |
             release-assets/*.tar.gz
             release-assets/*.zip
